<resources>
    <string name="app_name">login</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="login_account">请输入邮箱</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_account_hint">请输入昵称</string>
    <string name="login_password">请输入密码</string>
    <string name="login_confirmPassword">再次输入密码</string>
    <string name="login_verificationCode">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_forget_to_register_before">没有账号？</string>
    <string name="login_have_to_register_before">已经有账号？</string>
    <string name="login_have_to_register_after">去登录</string>
    <string name="login_forget_to_register_after">去注册</string>
    <string name="resend_countdown">%d秒后重新发送</string>
    <!--错误-->
    <string name="please_input_phone">请输入账号</string>
    <string name="please_input_the_correct_phone_number">请输入正确的手机号</string>
    <string name="please_input_password">请输入密码</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>