<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding_basic"
    tools:context=".LoginIn.LoginInFragment">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- 用户名输入框 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_username"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_marginTop_small"
        app:boxBackgroundMode="outline"
        app:endIconDrawable="@drawable/icon_clean"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintTextAppearance="@style/MyHintTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-.@"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="18dp"
            android:hint="@string/login_account"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="@color/black"
            app:errorEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- 密码输入框 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_marginTop_small"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_username"
        app:passwordToggleDrawable="@drawable/shape_seeorno">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="18dp"
            android:hint="@string/login_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="@color/black"
            app:errorEnabled="true"
            app:passwordToggleDrawable="@drawable/shape_seeorno" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Remember（记住密码）选项，使用CheckBox -->
    <CheckBox
        android:id="@+id/checkBox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_password"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/dp_marginTop_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_password" />

    <!-- Forget（忘记密码）选项，使用TextView模拟链接样式 -->
    <TextView
        android:id="@+id/textView_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forget_password"
        android:textColor="@color/red"
        android:textColorLink="@color/red"
        android:layout_marginEnd="@dimen/dp_marginTop_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_password" />

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_shape"
        android:text="@string/login_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_remember" />

</androidx.constraintlayout.widget.ConstraintLayout>